--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "bcrypt": "^5.1.1",
@@ -42,6 +43,7 @@
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "husky": "^8.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lint-staged": "^13.2.3",
     "zod": "^3.22.4"
   }
