--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.9",
+    "@types/nodemailer": "^6.4.14",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.1",
     "prisma": "^5.4.2",
@@ -46,6 +47,7 @@
     "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^13.2.3",
+    "nodemailer": "^6.9.7",
     "zod": "^3.22.4"
   }
 }
